# esp32_mpy

./: ..gitmodules.swp  .gitignore  .gitmodules  LICENSE  README.md  README_en.md  README_zh_CN.md
example/camera_test/: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig-bak  sdkconfig.spiram_s3
example/camera_test/main/: CMakeLists.txt  camera_test.c
example/cdc_msc/: CMakeLists.txt  sdkconfig
example/cdc_msc/src/: CMakeLists.txt  main.c
example/cdc_msc_freertos/: CMakeLists.txt  sdkconfig-bak  sdkconfig.freertos  sdkconfig.usb
example/lv_port_esp32/: .gitmodules  CMakeLists.txt  partitions_8M.csv  sdkconfig  sdkconfig.base_s3  sdkconfig.lvgl  sdkconfig.spiram_s3
example/lv_port_esp32/components/: lv_conf.h
example/lv_port_esp32/components/lv_examples/: Kconfig
example/lv_port_esp32/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
example/lv_port_esp32/main/: main.c
example/msc_test/: CMakeLists.txt  README.md  partitions_8M.csv  sdkconfig  sdkconfig.base_s3  sdkconfig.usb
example/msc_test/src/: CMakeLists.txt  Kconfig.projbuild  main.c  msc_disk.c  tinyusb.h  tusb_config.h
project/aitest/: .gitignore  CMakeLists.txt  Makefile  mpconfigport.h
project/aitest/boards/: sdkconfig.base_s3  sdkconfig.usb
project/aitest/boards/GENERIC_S3/: mpconfigboard.cmake  mpconfigboard.h
project/aitest/main/: CMakeLists.txt
project/aitest/modules/: main.py  system.py
project/aitest/omv/: omv.cmake
project/aitest/omv/alloc/: fb_alloc.c
project/aitest/omv/boards/esp32s/: omv_boardconfig.h
project/aitest/omv/common/: omv_sensor.h  usbdbg.c  usbdbg.h
project/aitest/omv/imlib/: apriltag.c  fmath.c  framebuffer.c  imlib.h  jpeg.c
project/aitest/omv/ports/esp32s/: esp32_sensors.c  sensor.c
project/aitest/src/: ef_sqrt.c  main.c
project/aitest/src/adapter/: machine_adc.c  machine_hw_spi.c  modmachine.c  modutime.c  mphalport.c  mphalport.h  mpthreadport.c  uart.c  usb.c  usb.h
project/aitest/src/mpy_modules/: modmatatalab.c
project/aitest/src/usb/: usb_cdc.c  usb_cdc.h
